04Jan23=======================================================================
1. Fillout DXCIDR, attach checks in PC61 and logins. Login that fail will 
   simply disconnect, like locked out callsigns
2. Fix qrz.com URL in stock Internet.pm.
3. Fix DXHash issues (baddx, badnode, badspotter etc)
30Dec22=======================================================================
1. Add more BadWords (regex) checks.
01Dec22=======================================================================
1. Re-add some debugging to see which incoming PC protcol sentences are
   being dumped because of any bad content (words or calls) if debugging
   option 'nologchan' is set.
2. All debugging for badwords has the word 'badword' in it. So that one can
   do a 'grepdbg -1 badword' and one should see who said it and all of what
   they said. Watchdbg will also work with this.
3. My latest recommended additions to the badword list includes:
   RU STOP SPOT DISGRACE CRM CRIM CRUD SUBHUMAN FASCIST DEGENERATE CATTLE CNT
23Nov22=======================================================================
1. The BadWord system has been rewritten. This change is pretty radical and
   needs to be used with care as a word that is entered will be reduced to the
   minimum sized string needed to match that word. 

   This is effective a sysop command changeable version of the file badw_regex
   but in a much more sysop friendly form. The (un)set/badword <word>...
   commands now update the /spider/local_data/badword.new file in real time
   without having to mess about with editing files and running load/badword.
   load/badword still works, but you should now never need it.  
19Nov22=======================================================================
1. "Fix" Badword detection in spots and announces etc. 
   NOTE: setting $DXCommandmode::maxbadcount to 0 (default 3) will disable
   autologout on swearing. But any (detected) swearing will be logged.